feat:added extra demo endpoints and updated swagger documentation
