# user-service/docs/swagger.yaml
@@ -1,5 +1,19 @@
 basePath: /
 definitions:
+  models.Authentication:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  models.AuthenticationResponse:
+    properties:
+      status:
+        type: string
+      token:
+        type: string
+    type: object
   models.CreateUserResponse:
     properties:
       status:
@@ -140,6 +154,32 @@ paths:
       summary: Create a user
       tags:
       - users
+  /users/auth:
+    post:
+      description: authenticate user
+      parameters:
+      - description: Auth Data
+        in: body
+        name: auth
+        required: true
+        schema:
+          $ref: '#/definitions/models.Authentication'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.AuthenticationResponse'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: user authentication
+      tags:
+      - auth
   /users/follow:
     get:
       description: Create a folloing entry between two users
@@ -164,6 +204,30 @@ paths:
           schema:
             $ref: '#/definitions/models.ErrorResponse'
       summary: follow user
+      tags:
+      - following
+  /users/followers:
+    get:
+      description: get all followers
+      parameters:
+      - description: User ID
+        in: query
+        name: id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Following'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: user followers
       tags:
       - following
 swagger: "2.0"
